Closed Bug 1392609 Opened 8 years ago Closed 8 years ago

Signedness Comparison Warning in xpcom/io/nsLocalFileWin.cpp - Find returns an int not a unit

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: tjr, Assigned: tjr)

References

Details

(Whiteboard: [tor])

Attachments

(1 file)

No description provided.
Attachment #8899826 - Flags: review?(nfroyd)
Attachment #8899826 - Flags: review?(nfroyd) → review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/2fd8398e3868 Find returns an int32_t not a uint32_t r=froydnj
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Summary: Signedness Comparison Warning → Signedness Comparison Warning in xpcom/io/nsLocalFileWin.cpp - Find returns an int not a unit
See Also: → 1393201
No longer blocks: 1330608
Blocks: 1394433
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: