Bug 1392609 Find returns an int32_t not a uint32_t r=froydnj

MozReview-Commit-ID: 8jBe7CGbAvM